log
Thu May 12 11:13:09 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c730e93
Thu May 12 11:18:40 HSP 2022: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
97f0b6a
Thu May 12 11:22:23 HSP 2022: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2cfdd16
Thu May 12 11:29:00 HSP 2022: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
8e0c641
Thu May 12 11:30:44 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f405bea
Thu May 12 11:31:25 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
22c7bfc
Thu May 12 11:32:27 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
98bb6d0
Thu May 12 11:37:36 HSP 2022: 
 sudoku.c | 37 ++++++++++---------------------------
 1 file changed, 10 insertions(+), 27 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
sudoku.c:64:10: error: unused variable 'vectorNum' [-Werror=unused-variable]
     int *vectorNum = (int*)calloc(10, sizeof(int));
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
545a6fa
